manifests/blog-app/istio-gateway-virtualService.yaml
# Gateway is a CustomResourceDefinition that helps to define how the external-traffic should be handled
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: blog-app-gateway
  namespace: istio-system
spec:
  selector:
    # istio-ingress service (which was deployed to namespace istio-ingress) has the following label
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Accepts traffic from any hostname. It’s like saying, “I don’t care who’s knocking, let everyone in.”
    # hosts: ["myblog.com"]: Accepts traffic only for myblog.coms
    hosts:
    - "blogapp.magdalani.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog-app
  namespace: blog-app
spec:
  hosts:
  - "blogapp.magdalani.com"
  gateways:
  - blog-app-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static
    - uri:
        prefix: /posts
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        exact: /register
    - uri:
        exact: /updateprofile
    route:
    - destination:
        host: frontend
        port:
          number: 80
