manifests/blog-app/virtual-services-canary.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: blog-app
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        # We defined the subset in istio-destination-rules.yaml manifest file
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: blog-app
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings
  namespace: blog-app
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 80
    - destination:
        host: ratings
        subset: v2
      weight: 20
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: posts
  namespace: blog-app
spec:
  hosts:
  - posts
  http:
  - route:
    - destination:
        host: posts
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: users
  namespace: blog-app
spec:
  hosts:
  - users
  http:
  - route:
    - destination:
        host: users
        subset: v1
