manifests/blog-app/virtual-services-mirroring.yaml
# VirtualService that are defined in this manifest file don't specify gateway (spec.gateway).
# This means that they are only handling internal service-to-service communication within the mesh.

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: blog-app
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: blog-app
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings
  namespace: blog-app
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 100
    mirror:
      host: ratings
      subset: v2
    mirror_percent: 100
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: posts
  namespace: blog-app
spec:
  hosts:
  - posts
  http:
  - route:
    - destination:
        host: posts
        subset: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: users
  namespace: blog-app
spec:
  hosts:
  - users
  http:
  - route:
    - destination:
        host: users
        subset: v1
